--- a/binaries/build.gradle
+++ b/binaries/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'java'
-apply plugin: 'com.github.dcendents.android-maven'
-
-group='com.github.guness'
+apply plugin: 'maven-publish'
 
 configurations {
     jni
@@ -35,7 +33,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.almworks.sqlite4java:sqlite4java:' + almworks_version
-    implementation 'com.google.guava:guava:28.0-android'
+    implementation 'com.google.guava:guava:30.0-jre'
 
     jni 'com.almworks.sqlite4java:libsqlite4java-osx:' + almworks_version
     jni 'com.almworks.sqlite4java:libsqlite4java-linux-amd64:' + almworks_version
@@ -44,3 +42,14 @@ dependencies {
     jni 'com.almworks.sqlite4java:sqlite4java-win32-x86:' + almworks_version
 }
 
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.github.guness'
+            artifactId = 'binaries'
+            version = robolectricsqlLite_version
+
+            from(components.java)
+        }
+    }
+}
